src/main/resources/static/css/header.css
@import url('https://fonts.googleapis.com/css?family=Inconsolata:700');

body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 50%;

}

body {
    font-family: "Helvetica Neue", sans-serif;
    font-weight: lighter;
}

h1 {
    color: white;
}


header {
    width: 100%;
    height: 70vh;
    background-size: cover;
    background: url("../image/BG.jpg") no-repeat 50% 60%;

}

.header-text {
    padding-top: 10%;
    color: white;
    text-shadow: 1px 0 0 grey, 0 -1px 0 grey, 0 1px 0 grey, -1px 0 0 grey;
    font-family: 'Nanum Gothic Coding', monospace;
}

.content {
    width: 90%;
    margin: 4em auto;
    font-size: 20px;
    line-height: 30px;
    text-align: justify;
}

.logo {
    line-height: 60px;
    position: fixed;
    float: left;
    margin: 16px 46px;
    color: #fff;
    font-weight: bold;
    font-size: 50px;
    letter-spacing: 2px;
}

nav {
    position: fixed;
    top: 0;
    width: 100%;
    line-height: 60px;
}

nav ul {
    line-height: 60px;
    list-style: none;
    background: rgba(50, 0, 80, 0.2);
    overflow: hidden;
    color: #fff;
    text-align: right;
    margin: 0;
    padding: 0 40px 0 0;
    transition: 1s;
}

nav.black ul {
    background: #c7ceea;
}

nav ul li {
    display: inline-block;
    padding: 16px 40px;;
}

nav ul li a {
    text-decoration: none;
    color: #fff;
    font-size: 30px;
}

.menu-icon {
    line-height: 60px;
    width: 100%;
    background: #c7ceea;
    text-align: right;
    box-sizing: border-box;
    padding: 15px 24px;
    cursor: pointer;
    color: #fff;
    display: none;
}

.container {
    position: relative;
    margin: calc(5px + 2vh + 2vw) auto 0 auto;
    padding: 0;
    width: 100%;
    max-width: 840px;
}

.search-box {
    position: relative;
    width: 100%;
    max-width: 360px;
    height: 60px;
    border-radius: 120px;
    margin: 0 auto;
}

.search-icon, .go-icon {
    position: absolute;
    top: 0;
    height: 60px;
    width: 86px;
    line-height: 61px;
    text-align: center;
}

.search-icon {
    left: 0;
    pointer-events: none;
    font-size: 1.22em;
    will-change: transform;
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform-origin: center center;
    -webkit-transform-origin: center center;
    -moz-transform-origin: center center;
    -o-transform-origin: center center;
    transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -webkit-transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -moz-transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -o-transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
}

.si-rotate {
    transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
}

.go-icon {
    right: 0;
    pointer-events: none;
    font-size: 1.38em;
    will-change: opacity;
    cursor: default;
    opacity: 0;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -webkit-transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -moz-transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -o-transition: opacity 190ms ease-out, transform 260ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
}

.go-in {
    opacity: 1;
    pointer-events: all;
    cursor: pointer;
    transform: rotate(0);
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -o-transform: rotate(0);
    transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -webkit-transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -moz-transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
    -o-transition: opacity 190ms ease-out, transform 260ms 20ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
}

.search-border {
    display: block;
    width: 100%;
    max-width: 360px;
    height: 60px;
}

.border {
    fill: none;
    stroke: #ffb7b2;
    stroke-width: 5;
    stroke-miterlimit: 10;
}

.border {
    stroke-dasharray: 740;
    stroke-dashoffset: 0;
    transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
    -webkit-transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
    -moz-transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
    -o-transition: stroke-dashoffset 400ms cubic-bezier(0.600, 0.040, 0.735, 0.990);
}

.border-searching .border {
    stroke-dasharray: 740;
    stroke-dashoffset: 459;
    transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
    -webkit-transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
    -moz-transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
    -o-transition: stroke-dashoffset 650ms cubic-bezier(0.755, 0.150, 0.205, 1.000);
}

#search {
    font-family: 'Montserrat Alternates', sans-serif;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 120px;
    border: none;
    background: rgba(255, 255, 255, 0);
    padding: 0 68px 0 68px;
    color: #ffb7b2;
    font-size: 1.32em;
    font-weight: 400;
    letter-spacing: -0.015em;
    outline: none;
}

#search::-webkit-input-placeholder {
    color: #ffb7b2;
}

#search::-moz-placeholder {
    color: #ffb7b2;
}

#search:-ms-input-placeholder {
    color: #ffb7b2;
}

#search:-moz-placeholder {
    color: #ffb7b2;
}

#search::-moz-selection {
    color: #ffb7b2;
    background: rgba(0, 0, 0, 0.25);
}

#search::selection {
    color: #ffb7b2;
    background: rgba(0, 0, 0, 0.25);
}

@media (max-width: 1200px) {

    nav ul li {
        display: inline-block;
        padding: 16px 10px;;
    }

    nav ul li a {
        text-decoration: none;
        color: #fff;
        font-size: 20px;
    }
}

@media (max-width: 1000px) {

    header {
        width: 100%;
        height: 30vh;
        background-size: cover;
        background: url("../image/BG.jpg") no-repeat 50% 60%;

    }

    .logo {
        position: fixed;
        top: 0;
        margin-top: 10px;
        font-size: 40px;
    }

    nav ul {
        max-height: 0;
        background: #c7ceea;
    }

    nav.black ul {
        background: #c7ceea;
    }

    .showing {
        max-height: 45em;
    }

    nav ul li {
        box-sizing: border-box;
        width: 100%;
        padding: 24px;
        text-align: center;
    }

    .menu-icon {
        display: block;
    }
}

.search-border {
    enable-background: new 0 0 671 111;
}

